# AuxSystemTools_Linux

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Configs/: CustomBashrcCommands.sh
Configs/CustomUserConfigs/: CustomBashCmds.sh  CustomUsrPath.sh
Configs/PackageInstaller/: AptDevTools.ini  AptPacks.ini  BudgieDesktop.ini  DnfDevTools.ini  DnfGroups.ini  DnfPacks.ini  SnapClassicPacks.ini  SnapPacks.ini
FontMng/: CMakeLists.txt  commands.cpp  commands.hpp  constants.hpp  constatnts.hpp  fontPack.cpp  fontPack.hpp  globalData.hpp  listPack.cpp  listPack.hpp  main.cpp  pch.h
Scripts/: PackageInstaller.py  Test.txt  Test2.txt  Test3.ini  UpdateSystem.py
Scripts/Tools/Maintenance/: vscode-clean-cache.py
Scripts/Tools/Management/: SwapMng.py
Tools/: CMakeLists.txt
Tools/LinuxImageBackup/: CMakeLists.txt  LinuxImageBackupTool.py  README.md
Tools/LinuxImageBackup/Console/: .gitignore  CMakeLists.txt  ConsoleOutput.hpp  Exception.cpp  Exception.hpp  Version.hpp  VersionInfo.hpp  main.cpp
Tools/LinuxImageBackup/Console/ToolSrc/Common/: DateTime.cpp  DateTime.hpp  FileTools.cpp  FileTools.hpp  ToolExceptions.hpp
Tools/LinuxImageBackup/Console/ToolSrc/Common/ErrorLib/: ErrorClasses.cpp  ErrorClasses.hpp  ErrorMessages.hpp
Tools/LinuxImageBackup/Console/ToolSrc/DiskTools/: DevDefines.hpp  DeviceUuid.cpp  DeviceUuid.hpp  Devices.cpp  Devices.hpp  MountPoint.cpp  MountPoint.hpp  fstab.cpp  fstab.hpp
Tools/LinuxImageBackup/Console/ToolSrc/HostTools/: SysTools.cpp  SysTools.hpp
Tools/LinuxImageBackup/Console/ToolSrc/ImageTools/: ImageBackup.hpp  ImageRestore.hpp  Types.hpp  TypesTools.cpp  TypesTools.hpp
Tools/LinuxImageBackup/Docs/: Project Info.md  Project Version History.md
