###########################################################
#
# CMakeLists: Linux Tools
#
###########################################################

cmake_minimum_required(VERSION 3.28)

###########################################################
#
# Sub projects:
#
###########################################################

add_subdirectory("LinuxImageBackup")